--- a/online/02/0310.html
+++ b/online/02/0310.html
@@ -139,8 +139,11 @@
 												<h2>역사</h2>
 <!-- 관련 단원명 --><h3>제자백가의 사상</h3>
 											</header>
-<video></video>
-<iframe width="100%" height="720px" src="http://good.edunet4u.net/classMovie/player/gmediaVideo/index-keris.jsp?cid=217625&autoPlay=false&nVolume=60&startTime=100&endTime=200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140123/m02so07048a0003.mp4" controls="controls"></video>
+<form name="mc">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[3].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[3].pause();">
+</form>
 											
 <!-- 핵심 학습 요소를 간략히 기술 --><p>제자백가의 출현 배경을 공부해 봅시다.</p>
 
