--- a/online/02/0312.html
+++ b/online/02/0312.html
@@ -143,14 +143,19 @@
 												<h2>역사</h2>
 <!-- 관련 단원명 --><h3>4. 산업 사회와 국민 국가의 형성</h3>
 											</header>
+											<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->1. 프랑스 혁명의 배경 - 구제도의 모순을 배워 봅시다.
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0001.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
+</form>
+											</p><p></p>
+<form name="mc">											
+<!-- 핵심 학습 요소를 간략히 기술 --><p>2. 프랑스 혁명의 전개 과정을 배워 봅시다.
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0002.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[5].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[5].pause();">
+</form></p>
 
-<iframe width="100%" height="720px" src="http://good.edunet4u.net/classMovie/player/gmediaVideo/index-keris.jsp?cid=221490&autoPlay=false&nVolume=60&startTime=100&endTime=200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											
-<!-- 핵심 학습 요소를 간략히 기술 --><p>프랑스 혁명의 배경 - 구제도의 모순을 배워 봅시다.</p>
-
-<iframe width="100%" height="720px" src="http://good.edunet4u.net/classMovie/player/gmediaVideo/index-keris.jsp?cid=221491&autoPlay=false&nVolume=60&startTime=100&endTime=200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											
-<!-- 핵심 학습 요소를 간략히 기술 --><p>프랑스 혁명의 전개 과정을 배워 봅시다.</p>
 
 									<!-- 과학 영역 -->
 											<header>
@@ -159,8 +164,8 @@
 											</header>
 <video src="http://content-cdn.edunet.net/edudata/content/midd/g2/com/sci/midd_g2_com_sci_15781.mp4" controls="controls"></video>
 <form name="mc">
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[6].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[6].pause();">
 </form>
 <!-- 핵심 학습 요소를 간략히 기술 --><p>스펙트럼으로 원소를 구별하는 법을 배워 봅시다.</p>
 
@@ -172,8 +177,8 @@
 																								<form name="mc">
 <video src="http://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14620.mp4" controls="controls"></video>
 
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[5].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[5].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[7].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[7].pause();">
 </form><p>장구로 중중모리 장단을 연주해 봅시다.</p>
 
 									<!-- 미술 영역 -->											
