--- a/online/02/0313.html
+++ b/online/02/0313.html
@@ -138,13 +138,20 @@
 												<h2>역사</h2>
 <!-- 관련 단원명 --><h3>4. 산업 사회와 국민 국가의 형성</h3>
 											</header>
-<video></video>
-<iframe width="100%" height="720px" src="http://good.edunet4u.net/classMovie/player/gmediaVideo/index-keris.jsp?cid=221814&autoPlay=false&nVolume=60&startTime=100&endTime=200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											
-<!-- 핵심 학습 요소를 간략히 기술 --><p>빈체제의 몰락과 프랑스의 왕정복고 과정을 배워 봅시다.</p>
-<iframe width="100%" height="720px" src="http://good.edunet4u.net/classMovie/player/gmediaVideo/index-keris.jsp?cid=221515&autoPlay=false&nVolume=60&startTime=100&endTime=200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											
-<!-- 핵심 학습 요소를 간략히 기술 --><p>프랑스 혁명이 현대 사회에 미친 영향을 배워 봅시다.</p>
+											<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->1. 빈 체제의 몰락과 프랑스 왕정 복고 과정을 배워 봅시다.</p>
+<iframe width="100%" height="720px" src
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028c0001.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[3].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[3].pause();">
+</form>
+											</p><p></p>
+<form name="mc">											
+<!-- 핵심 학습 요소를 간략히 기술 --><p>2. 프랑스 혁명이 현대 사회에 미친 영향을 배워 봅시다.
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028a0004.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
+</form></p>
+
 									<!-- 과학 영역 -->
 											<header>
 													<h2>과학</h2>
@@ -152,8 +159,8 @@
 											</header>
 <video src="http://content-cdn.edunet.net/edudata/content/midd/g2/com/sci/midd_g2_com_sci_15782.mp4" controls="controls"></video>
 <form name="mc">
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[5].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[5].pause();">
 </form>
 <!-- 핵심 학습 요소를 간략히 기술 --><p>영상을 보고 원자와 원소를 구분해 봅시다.</p>
 
@@ -165,8 +172,8 @@
 																								<form name="mc">
 <video src="http://content-cdn.edunet.net/edudata/content/com/com/com/spc/com_com_com_spc_14621.mp4" controls="controls"></video>
 
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[5].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[5].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[6].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[6].pause();">
 </form>
 													<p>장구로 엇모리 장단을 연주해 봅시다.</p>
 
