--- a/online/02/0312.html
+++ b/online/02/0312.html
@@ -144,14 +144,14 @@
 <!-- 관련 단원명 --><h3>4. 산업 사회와 국민 국가의 형성</h3>
 											</header>
 											<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->1. 프랑스 혁명의 배경 - 구제도의 모순을 배워 봅시다.
-<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0001.mp4" controls="controls"></video>
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0001.mp4" controls="controls"></video><br>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
 </form>
 											</p><p></p>
 <form name="mc">											
 <!-- 핵심 학습 요소를 간략히 기술 --><p>2. 프랑스 혁명의 전개 과정을 배워 봅시다.
-<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0002.mp4" controls="controls"></video>
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05026a0002.mp4" controls="controls"></video><br>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[5].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[5].pause();">
 </form></p>
