--- a/online/02/0312.html
+++ b/online/02/0312.html
@@ -204,7 +204,7 @@
 												<h2>인문</h2>
 												<h3>인문학 특강 듣기</h3>
 											</header>
-							<a href="https://www.youtube.com/user/cbs15min" class="button">세상을 바꾸는 시간 15분 채널 가기</a>
+							<a href="https://www.youtube.com/user/cbs15min/videos" class="button">세상을 바꾸는 시간 15분 채널 가기</a>
 												<p>마음에 드는 인문학 특강을 자유롭게 골라서 1일 1강연을 들으세요.</p>
 										</article>
 
