--- a/online/02/0313.html
+++ b/online/02/0313.html
@@ -139,15 +139,13 @@
 <!-- 관련 단원명 --><h3>4. 산업 사회와 국민 국가의 형성</h3>
 											</header>
 											<form name="mc"><p><!-- 핵심 학습 요소를 간략히 기술 -->1. 빈 체제의 몰락과 프랑스 왕정 복고 과정을 배워 봅시다.</p>
-<iframe width="100%" height="720px" src
-<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028c0001.mp4" controls="controls"></video>
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028c0001.mp4" controls="controls"></video><br>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[3].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[3].pause();">
-</form>
-											</p><p></p>
+</form><p></p>
 <form name="mc">											
 <!-- 핵심 학습 요소를 간략히 기술 --><p>2. 프랑스 혁명이 현대 사회에 미친 영향을 배워 봅시다.
-<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028a0004.mp4" controls="controls"></video>
+<video src="http://goodfms.edunet4u.net/vod2/upload/video/A000800002_20140124/m03so05028a0004.mp4" controls="controls"></video><br>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[4].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[4].pause();">
 </form></p>
@@ -201,7 +199,7 @@
 												<h2>인문</h2>
 												<h3>인문학 특강 듣기</h3>
 											</header>
-							<a href="https://www.youtube.com/user/cbs15min" class="button">세상을 바꾸는 시간 15분 채널 가기</a>
+							<a href="https://www.youtube.com/user/cbs15min/videos" class="button">세상을 바꾸는 시간 15분 채널 가기</a>
 												<p>마음에 드는 인문학 특강을 자유롭게 골라서 1일 1강연을 들으세요.</p>
 										</article>
 
