--- a/online/02/index.html
+++ b/online/02/index.html
@@ -48,7 +48,7 @@
 								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
-										<li><a href="https://cls.edunet.net/cyber/ss/scca/pscc000a00.do?isMain=2">혼자 진도나가기</a></li>
+										<li><a href="../cls.html">혼자 진도나가기</a></li>
 										<li><a href="https://cls.edunet.net/learn/selfEvlRegist.do">시험 쳐 보기</a></li>
 									</ul>
 								</li>
