--- a/online/cls.html
+++ b/online/cls.html
@@ -54,13 +54,13 @@
 								<section class="container box feature1">
             <div class="row">
 											<header class="first">
-												<h2><a href="http://www.edunet.net/nedu/main/mainForm.do#">에듀넷 티클리어(클릭)</a></h2>
-													<p>원하는 수업 주제를 검색해서 공부할 수 있어요. 아래 그림을 참고하세요</p>											
+												<h2><a href="https://cls.edunet.net/cyber/ss/scca/pscc000a00.do?isMain=2">중학교 e 학습터(클릭)</a></h2>
+													<p>과목별 단원을 골라서 공부할 수 있어요. 아래 그림을 참고하세요</p>											
 											</header>											
-									<img src="images/edu1.png">
-													<h2>검색어로 "풍자"를 넣어보았더니 이렇게 많은 자료가 나오네요.</h2>					
-									<img src="images/edu2.png">
-													<h2>궁금한 검색어를 이것 저것 넣어 보고 열심히 공부하세요. <a href="http://www.edunet.net/nedu/main/mainForm.do#"> 에듀넷 티클리어(클릭)</a></h2>			
+									<img src="images/cls1.png">
+													<h2>학년과 과목을 고른 다음 원하는 단원을 클릭하면 아래와 같이 영상이 나옵니다.</h2>			
+									<img src="images/cls2.png">
+													<h2>과목별로 영상 보면서 열심히 공부하세요. <a href="https://cls.edunet.net/cyber/ss/scca/pscc000a00.do?isMain=2"> 중학교 e 학습터(클릭)</a></h2>			
             </div>
 																
 			<!-- Footer Wrapper -->
