--- a/online/cls.html
+++ b/online/cls.html
@@ -37,6 +37,13 @@
 												<li><a href="01/index.html" >1학년</a></li>
 												<li><a href="02/index.html" >2학년</a></li>
 												<li><a href="03/index.html" >3학년</a></li>
+								<li><a href="#">더 공부하기</a>
+<ul>
+										<li><a href="edunet.html">수업 자료 검색</a></li>
+										<li><a href="cls.html">혼자 진도나가기</a></li>
+										<li><a href="https://cls.edunet.net/learn/selfEvlRegist.do">시험 쳐 보기</a></li>
+									</ul>
+								</li>
 											</ul>
 										</nav>
 										
