--- a/online/03/index.html
+++ b/online/03/index.html
@@ -55,8 +55,8 @@ text-align:center;}
 									</ul>
 								</li>
 								<li><a href="../01/index.html">1학년 보기</a></li>
-								<li><a href="#">2학년 보기</a></li>
-								<li class="current"><a href="../03/index.html">3학년 보기</a></li>
+								<li><a href="../02/index.html">2학년 보기</a></li>
+								<li class="current"><a href="#">3학년 보기</a></li>
 								<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
