--- a/online/01/0312.html
+++ b/online/01/0312.html
@@ -40,9 +40,9 @@ iframe {max-width:100%;  height:720px;}
 										<li><a href="0313.html">3월13일</a></li>										
 									</ul>
 								</li>
-								<li><a href="../01/index.html">1학년 보기</a></li>
-								<li><a href="#">2학년 보기</a></li>
-								<li class="current"><a href="../03/index.html">3학년 보기</a></li>
+								<li class="current"><a href="#">1학년 보기</a></li>
+								<li ><a href="../02/index.html">2학년 보기</a></li>
+								<li ><a href="../01/index.html">3학년 보기</a></li>
 																<li><a href="#">더 공부하기</a>
 <ul>
 										<li><a href="../edunet.html">수업 자료 검색</a></li>
