--- a/online/01/0312.html
+++ b/online/01/0312.html
@@ -26,7 +26,7 @@ iframe {max-width:100%;  height:720px;}
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">감천중학교 <em> 3학년 가정학습실</em></a></h1>
+						<h1><a href="index.html" id="logo">감천중학교 <em> 1학년 가정학습실</em></a></h1>
 
 					<!-- 상단 메뉴-->
 						<nav id="nav">
@@ -102,35 +102,32 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 1교시 -->
 											<header>
 													<h2><a name="1">1교시:</a>영어</h2>
-<!-- 관련 단원명 --><h3>영어 듣기 평가</h3>
+<!-- 관련 단원명 --><h3>03. She Has Long Hair</h3>
 												</header>
-<!-- 핵심 학습 요소를 간략히 기술 --><p>2019학년도 영어듣기 평가를 들으면서 모르는 표현 정리해 두세요.<br>
-<form name="mc">
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('audio')[0].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('audio')[0].pause();">
-<br><br><audio src="pds/20190411.mp3" controls="controls"></audio>
-</form></p>
-
-												<a href="https://www.pen.go.kr/synapskin/doc.html?fn=BBS_0000149_5527147_5099466&rs=/upload_data/synap_data/202003" class="button" target=_blank>대본보기</a> 
-												<a href="https://www.pen.go.kr/synapskin/doc.html?fn=BBS_0000149_5527147_5099467&rs=/upload_data/synap_data/202003" class="button" target=_blank>문제보기</a>
-<p></p>
-									<!-- 2교시 -->
-											<header>
-												<h2><a name="2">2교시:</a>과학</h2>	
-<!-- 관련 단원명 --><h3>01. 화학 반응의 규칙과 에너지 변화</h3>
-											</header>
 							<form name="mc">				
-<!-- 핵심 학습 요소를 간략히 기술 --><p>영상을 보고 물리 변화와 화학 변화를 구분해 봅시다.<br>
-
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g3/com/sci/midd_g3_com_sci_24897.mp4" controls="controls"></video>
+<!-- 핵심 학습 요소를 간략히 기술 --><p>영어로 외양 묘사하기와 잘하는 것 말하기를 해 봅시다.<br>
+<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/eng/midd_g1_com_eng_3990.mp4" controls="controls"></video>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
 </form>
-</p><p>
-<form name="mc">
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g3/com/sci/midd_g3_com_sci_24898.mp4" controls="controls"></video>
+</P>
+
+									<!-- 2교시 -->
+											<header>
+												<h2><a name="2">2교시:</a>과학</h2>	
+<!-- 관련 단원명 --><h3>01. 지권의 변화</h3>
+											</header>
+							<form name="mc">				
+<!-- 핵심 학습 요소를 간략히 기술 --><p>지구의 내부 구조를 알아 봅시다.<br>
+<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/sci/midd_g1_com_sci_4151.mp4" controls="controls"></video>
 		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
 		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
+</form>
+</p><p>
+<form name="mc">
+<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/sci/midd_g1_com_sci_4164.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[2].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
 </form></p>
 
 
@@ -138,13 +135,12 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 3교시 -->
 											<header>
 												<h2><a name="3">3교시:</a>수학</h2>
-<!-- 관련 단원명 --><h3>01. 제곱근과 실수</h3>
+<!-- 관련 단원명 --><h3>01. 지수와 유리수</h3>
 											</header><form name="mc">
-<!-- 핵심 학습 요소를 간략히 기술 --><p>제곱근의 크기를 비교해 봅시다.<br>
-
-<video src="http://content-cdn.edunet.net/edudata/content/midd/g3/com/mat/midd_g3_com_mat_21720.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[2].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
+<!-- 핵심 학습 요소를 간략히 기술 --><p>유리수를 분류해 봅시다.<br>
+<video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/mat/midd_g1_com_mat_6058.mp4" controls="controls"></video>
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[3].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[3].pause();">
 </form></p>
 
 
