--- a/online/01/0311.html
+++ b/online/01/0311.html
@@ -103,7 +103,7 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 1교시 -->
 											<header>
 												<h2><a name="1">1교시:</a>사회</h2>	
-<!-- 관련 단원명 --><h3>교과 연계 독서 활동</h3>
+<!-- 관련 단원명 --><h3>교과 연계 독서 활동(1)</h3>
 											</header>
 									
 <!-- 핵심 학습 요소를 간략히 기술 --><p>지리와 관련된 도서 <b>『80일간의 세계 일주』</b>을 읽어 봅시다.<br>
@@ -124,9 +124,10 @@ iframe {max-width:100%;  height:720px;}
 									<!-- 2교시 -->
 											<header>
 												<h2><a name="2">2교시:</a>국어</h2>
-<!-- 관련 단원명 --><h3>감천 리틀빅히어로 프로젝트</h3>
+<!-- 관련 단원명 --><h3>감천 리틀빅히어로 프로젝트(2)</h3>
 											</header>
 <!-- 핵심 학습 요소를 간략히 기술 --><p>2단계: 1단계에서 찾아본 코로나 사태를 막기 위해 노력하는 주변의 인물들이 구체적으로 어떤 일을 하는지 조사하고,  지금 얼마나 힘든지 공감 및 위로의 말 구상하기</p>
+<!-- 핵심 학습 요소를 간략히 기술 --><p><b>예)</b> 친구들도 못 만나고 PC방도 못 가고 방안에 3주나 갇혀서 견디는 내가 바로 영웅이다. 힘든 점: 갑갑하다. 지겹다. 괴롭다. 심심하다. 등</p>
 <a href="pds/감천리틀빅히어로프로젝트(양식).hwp" class="button">양식 파일 다운 받기</a>
 </p>
 
