--- a/online/01/index.html
+++ b/online/01/index.html
@@ -40,7 +40,7 @@ text-align:center;}
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">감천중학교 <em> 3학년 가정학습실</em></a></h1>
+						<h1><a href="index.html" id="logo">감천중학교 <em> 1학년 가정학습실</em></a></h1>
 
 					<!-- 상단 메뉴-->
 						<nav id="nav">
@@ -74,7 +74,7 @@ text-align:center;}
 			<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<a href="#" class="button">3월 9일 </a> <h2> 사회적 거리두기로 코로나 이겨냅시다.</h2>
+							<h2>1학년 가정학습 시간표</h2>
 						</header>
 					</div>
 			</section>
@@ -113,7 +113,7 @@ text-align:center;}
 
 										<article>
 
-<h1>3학년 가정학습 시간표</h1>
+
 									<table style="border-collapse:collapse;table-layout:fixed;border-top:none;border-left:none;border-bottom:none;border-right:none;mso-table-overlap:never;" width="100%">
     <tr>
         <td valign="middle">
@@ -146,19 +146,19 @@ text-align:center;}
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#1">EBS중학 "어휘가 독해다" 강의 수강</a>
+            <a href="0309.html#1">감천 리틀빅히어로 프로젝트(1)<br>제재 선정</a>
         </td>
         <td  valign="middle">            
-            <a href="0310.html#1">제곱근의 성질</a>
+            <a href="0310.html#1">교과 연계 독서 활동<br>박사가 사랑한 수식</a>
         </td>
         <td  valign="middle">
-            <a href="0311.html#1">청교도 혁명과 명예 혁명</a>
+            <a href="0311.html#1">교과 연계 독서 활동<br>80일간의 세계 일주(1)</a>
         </td>
         <td  valign="middle">
-           <a href="0312.html#1">2019  영어듣기 평가에서 모르는 표현 정리</a>
+           <a href="0312.html#1">03. She Has Long Hair</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#1">물질의 화학 변화를 표현하기</a>
+            <a href="0313.html#1">교과 연계 독서 활동<br>자유 선택 도서</a>
         </td>
     </tr>
     <tr>
@@ -183,20 +183,19 @@ text-align:center;}
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#2">리딩게이트 속 책을 1권
-읽고 활동하기</a>
+            <a href="0309.html#2">01. What's Your Favorite Sport?</a>
         </td>
         <td valign="middle">
-            <a href="0310.html#2">유튜브 속 코로나 관련 뉴스 팩트 체크 보고서</a>
+            <a href="0310.html#2">지구계의 구성 요소</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#2">설화의 구조와 특성</a>
+            <a href="0311.html#2">감천 리틀빅히어로 프로젝트(2)<br>내용 생성</a>
         </td>
         <td valign="middle">
-            <a href="0312.html#2">물리 변화와 화학 변화</a>
+            <a href="0312.html#2">지구의 내부 구조</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#2">미국 독립 혁명의 전개와 의의</a>
+            <a href="0313.html#2">교과 연계 독서 활동<br>80일간의 세계 일주(2)</a>
         </td>
     </tr>
     <tr>
@@ -221,19 +220,19 @@ text-align:center;}
     </tr>
     <tr>
         <td  valign="middle">            
-            <a href="0309.html#3">제곱근의 개념과 제곱근의 표현</a>
+            <a href="0309.html#3">양수와 음수</a>
         </td>
         <td valign="middle">
-            <a href="0310.html#3">프랑스 혁명 내용 정리</a>
+            <a href="0310.html#3">1-01. 지도 읽기<br>지도의 개념과 특성</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#3">궁금증을 영어로 표현하기</a>
+            <a href="0311.html#3">02. How Do You Feel Today? </a>
         </td>
         <td valign="middle">
-            <a href="0312.html#3">제곱근의 크기 비교</a>
+            <a href="0312.html#3">유리수의 분류</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#3">신화, 전설, 민담의 개념과 특성</a>
+            <a href="0313.html#3">감천 리틀빅히어로 프로젝트(3)<br>내용 작성</a>
         </td>
     </tr>
     <tr>
@@ -258,19 +257,19 @@ text-align:center;}
     </tr>
     <tr>
         <td valign="middle">
-            <a href="0309.html#4">오케스트라의 이해</a>
+            <a href="0309.html#4">주변의 물건으로 음악 표현하기</a>
         </td>
         <td valign="middle">
             <a href="0310.html#4">줄넘기 30분</a>
         </td>
         <td valign="middle">
-            <a href="0311.html#4">3D펜 메이킹 아이디어 짜기</a>
+            <a href="0311.html#4">서양의 명화 감상</a>
         </td>
         <td valign="middle">
             <a href="0312.html#4">줄넘기 30분</a>
         </td>
         <td valign="middle">
-            <a href="0313.html#4">인문학 특강 스스로 골라 시청하기</a>
+            <a href="0313.html#4">4차 산업 혁명 특강 시청하고 생각 정리하기</a>
         </td>
     </tr>
 </table>
