--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ h2 a { display:block; margin-left:2em }
 
 <body>
 	
-
+<h1>감천중학교 가정학습 페이지로 이동합니다.</h1>
+<!--
 <h1><abbr title="XHTML Friends Network">XFN</abbr> 1.1 relationships meta data profile</h1>
 
 <h2>Authors</h2>
@@ -63,7 +64,7 @@ h2 a { display:block; margin-left:2em }
 		<a href="./html/book/ysi.htm">담화 맥락 </a><br />
 	
 <h2>Copyright</h2>
-
+-->
 <p id="copyright">Copyright &copy; 2003&#8211;2019  GMPG <a href="#authors"></a>. <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/">Some rights reserved</a>.</p>
 <!-- 코스모스팜 소셜댓글 시작 -->
 <script id="cosmosfarm-comments-script" type="text/javascript" src="https://plugin.cosmosfarm.com/comments.js"></script>
