--- a/online/01/0309.html
+++ b/online/01/0309.html
@@ -107,9 +107,8 @@ iframe {max-width:100%;  height:720px;}
 											</header>
 
 <!-- 핵심 학습 요소를 간략히 기술 --><p>1단계: 다음 영상을 참고하여 코로나19 사태를 막기 위해 애쓰는 주변 인물 찾기</p>
-<iframe width="100%" height="720" src="https://www.youtube.com/embed/Yf07aON973I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-											<p></p>
+<iframe width="100%" height="720" src="https://www.youtube.com/embed/y2Ru6QKzDqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<p><iframe width="1280" height="720" src="https://www.youtube.com/embed/9ixjZsT-BF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 									<!-- 2교시 -->
 											<header>
@@ -134,8 +133,8 @@ iframe {max-width:100%;  height:720px;}
 <form name="mc">
 <!-- 핵심 학습 요소를 간략히 기술 --><p>양수와 음수에 대해 배워 봅시다.<br>
 <video src="http://content-cdn.edunet.net/edudata/content/midd/g1/com/eng/midd_g1_com_eng_3988.mp4" controls="controls"></video>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[1].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[1].pause();">
 		</p>
 </form>
 
@@ -148,8 +147,8 @@ iframe {max-width:100%;  height:720px;}
 <form name="mc">
 <!-- 핵심 학습 요소를 간략히 기술 --><p>영상을 참고하여 집 안의 물건으로 재미있는 음악을 표현해 봅시다.<br>
 <video src="http://goodencoder.edunet4u.net:8080/vod2/upload/video/A000800002_20190130/F9CAB9E4-435B-3806-8A1D-9C64379F8409.mp4" controls="controls"></video><br>
-		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[0].play();">
-		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[0].pause();">
+		<input type="button" value="PLAY" onClick="document.getElementsByTagName('video')[2].play();">
+		<input type="button" value="PAUSE" onClick="document.getElementsByTagName('video')[2].pause();">
 		</p>
 </form>
 
