--- a/online/index.html
+++ b/online/index.html
@@ -210,6 +210,16 @@ border-box; padding: 0px; margin: 0px; vertical-align: middle; border: 0px; outl
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<!-- 접속통계 MyLog 삽입코드 -->
+<SCRIPT LANGUAGE="JavaScript">
+<!--
+document.write("<a href=http://jangi.net/cgi-bin/log/admin.cgi target=_blank>");
+document.write("<img SRC=http://jangi.net/cgi-bin/log/log.cgi?ref=");
+document.write(escape(document.referrer));
+document.write(" width=5 border=0></a>");
+//-->
+</SCRIPT>
+<!-- 접속통계 MyLog 삽입코드 끝 -->
 
 	</body>
 </html>
