--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@ h2 a { display:block; margin-left:2em }
 <body>
 	
 <h1>감천중학교 가정학습 페이지로 이동합니다.</h1>
+<!-- 접속통계 MyLog 삽입코드 -->
+<SCRIPT LANGUAGE="JavaScript">
+<!--
+document.write("<a href=http://jangi.net/cgi-bin/log/admin.cgi target=_blank>");
+document.write("<img SRC=http://jangi.net/cgi-bin/log/log.cgi?ref=");
+document.write(escape(document.referrer));
+document.write(" width=5 border=0></a>");
+//-->
+</SCRIPT>
+<!-- 접속통계 MyLog 삽입코드 끝 -->
 <!--
 <h1><abbr title="XHTML Friends Network">XFN</abbr> 1.1 relationships meta data profile</h1>
 
